--- a/src/styles/scss/components/_carouselDev.scss
+++ b/src/styles/scss/components/_carouselDev.scss
@@ -26,6 +26,11 @@
             top: 45%;
             z-index: 1;
             cursor: pointer;
+            transition: 0.5s;
+            &:hover {
+                transform: scale(1.15);
+                transition: 0.5s;
+            }
         }
         &__rightArrow {
             height: 10%;
@@ -35,6 +40,11 @@
             top: 45%;
             z-index: 1;
             cursor: pointer;
+            transition: 0.5s;
+            &:hover {
+                transform: scale(1.15);
+                transition: 0.5s;
+            }
         }
         &__img {
             width: 100%;
@@ -59,6 +69,11 @@
             padding-right: 72%;
             cursor: pointer;
             z-index: 2;
+            transition: 0.5s;
+            &:hover{
+                transform: scale(1.05);
+                transition: 0.5s;
+            }
         }
         p {
             z-index: 2;
