--- a/src/styles/scss/components/_topOtherProject.scss
+++ b/src/styles/scss/components/_topOtherProject.scss
@@ -13,7 +13,7 @@
             position: absolute;
             left: 34px;
             top: 50%;
-            z-index: 1;
+            z-index: 10;
         }
         &__logo {
             width: 50%;
@@ -113,10 +113,16 @@
         display: flex;
         justify-content: space-between;
         padding-top: 80px;
+        transition: 0.5s;
+        :hover {
+            transition: 0.5s;
+            transform: scale(1.1);
+        }
         a{
             display: flex;
             align-items: center;
             cursor: pointer;
+            transition: 0.5s;
             p {
                 padding-left: 10px;
                 padding-right: 10px;
